[package]
name = "rust_mdns_client"
version = "0.1.1"
edition = "2021"
description = "A simple TUI mDNS client"
license-file = "./LICENSE"
repository="https://github.com/TommyGymer/rust_mdns_client/" 

[dependencies]
async-std = "1.13.0"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
futures-util = "0.3.31"
mdns = "3.0.0"
ratatui = "0.29.0"
